Implementacion de mensajes entre grilla de productos y los detalles del producto propieamente dicho.

--- a/ANSv4/Catalogo4/_productos/SearchFilter.resx
+++ b/ANSv4/Catalogo4/_productos/SearchFilter.resx
@@ -124,81 +124,81 @@
   <data name="btnApply0.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALuSURBVHhe7Zo9axRRFIaDSFIImkISRGzyE2xE0qQIaUwR
-        BPt0kh9gvYWIzSKCWCRamMLOwsYmzQZSCBZBcdOlkRA2iCy439/r+8ouDJfZ3bl7dybX8V0YZnb2nDPn
-        PHPuuWfu7NycPiIgAiIgAiIgAiIgAiIgAiIgAiIgAiIgAiIgAiIgAiIgAiIgAiLgJYFMJnOl1Wrd73a7
-        2U6n8wXHZ/V6vcE9v+P8u16vt4ltwcsAknKKoPr9/qN2u32K/cRPs9m8AMDHuVzualI+enOdSqVyC8Ef
-        TaQUIgC978jAFW+CidsRZMpdbIVpYA11AKyIIXovbl8v3X61Wr2N2nRuwqrValXUqjcYng9wfIf1invI
-        ruL880aj8cvUwbmflLn0oOJygLWHRdwMHEA+lMvlpXHXhc4i5PZMXdj7ltqahuC2Q2BlbW4QoD0LgbZt
-        Y+OfkGUWmLMhgn8/jfPQ2w9Co93UtRwIaj0YJGvWpGE4Cib1qG9AW58Gvrc6yIrXwQD53cVZ6L+apT0X
-        X2LRRf06NmrPmsuFYGstaA/2P7vY806XLUAwQNSc6y5Osp0w65iLPe90zZnN1UECD9pEI/vb1aZX+iaw
-        WWcYH9S9CtjVGcySJ6phFhQTmCV3LdzxXxQZ9lB9mMV9YiduzpSz6vRRv36krtMnW/RKT/QsGTHL8vn8
-        PDLqY9gamFYrDIjjYA0BDtbDdrkehuG1zId17gfrYU//m/WwKLCmWXnliivgOj1eRRwcyYnFBSuVa/pR
-        YCHwQ2w7YcMtLOtS+9YoKqxCoXCN+U55DK8NFP+XAPiV9QxbbwDomO8l8fvWUD65MZLAlWxhJeCSv5cQ
-        LIt7I1gWsCiKOvNiXHvAAp/KGmTJ6a84n+P455FRwATLoMq3OIJlmWoYkgchL1g1DEdx5L9xAO0T+yeC
-        w/Fb1awIWVcsFm+USqWbEUQlIgIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIzI/AHJmKM
-        1I2o/oIAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALsSURBVHhe7Zq/axRBFMeDiBYBtRAliE3+BBsRmxTBJhYS
+        SJ8u5A+wvkLE5hBBLKIWWtilSJPG5gSLQIqgeOnSiMgFkQPv595vv1+5g2XYu9u5ud1M1u/Csnd77715
+        77Nv3szO3MKCDhEQAREQAREQAREQAREQAREQAREQAREQAREQAREQAREQAREQARHwkkAul7vQbrfv9Xq9
+        fLfbPcTnH41GI+CV33H/Xb/ff4jzspcBpOUUQQ0Gg41Op3OC69Sj1WqdAuBWoVC4mJaP3rRTq9WWEPzn
+        qZQiBKD3rdlsLnsTTNKOIFPu4CzNAmukA2BldNG7Sft65vbr9fot1KafJizcr6NWvUH3XEP9us16xStk
+        7+P+syAIfps6uPeLMmceVFIOsPawiJuBA8hutVq9Mald6FyD3GtTF/a+ZramIbjNCFh5mwcEaE8joG3a
+        2DgXsswCczRE8B9mcR5678PQaDdzUw4EtRoOkjVrWjccB5N61Degrc4C31sdZMWrcID87uIs9F/O056L
+        L4noon4dGbVnxaUh2FoJ24P9Axd73ulyChAOEDXniouTnE6YdczFnne65sjm6iCBh20C4B9Xm17pm8Dm
+        nWF8UfcqYFdnMEoeq4ZZUExhlNyxcMd/UWTYuuZhFs+JM3FzpJzXTB/163vmZvpki7nSY71LxsyyYrF4
+        CRm1F7UGptUKA+IkWCOAw/WwHa6HoXvd5Ms6r8P1sCf/zXpYHFizrLxyxRVwnV6vYnaO9MSSgpXJNf04
+        sBD4J5zbUd0tKusyu2sUF1apVFpkvlMe3esBiv8LAPzCeoajPwR0xH1J/P5oJJ9eH0mhJVtYKbjkbxOC
+        ZfFsBMsCFkVRZ55Pmh6wwGeyBlly+ic+3HQNxgETLIMqd3EEyzLV0CU/RmywqhuO48h/4wDaPudPBIfP
+        b1WzYmRduVy+WqlUrscQlYgIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIzI3AX+H4jLCd
+        mPocAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnApply.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALvSURBVHhe7Zo9axRRFIaDSFIImkISRGzyE2xE0qQIaUwR
-        BPt0kh9gvYWIzSKCWCRamMLOwsYmzQZSCBZBcdOlkRA2iCy439/r+8ouDJfZ3bl7dybX8V0YZnb2nDPn
-        PHPuuWfu7NycPiIgAiIgAiIgAiIgAiIgAiIgAiIgAiIgAiIgAiIgAiIgAiIgAiLgJYFMJnOl1Wrd73a7
-        2U6n8wXHZ9VqtcE9v+P8u16vt4ltwcsAknKKoPr9/qN2u32K/cRPs9m8AMDHuVzualI+enOdSqVyC8Ef
-        TaQUIgC97/V6fcWbYOJ2BJlyF1thGlhDHQArYojei9vXS7eP2nQbtenchIWMq6JWvcHwfFCr1e6wXnEP
-        2VWcf95oNH6ZOjj3kzKXHlRcDrD2sIibgQPIh3K5vDTuutBZhNyeqQt731Jb0xDcdgisrM0NArRnIdC2
-        bWz8E7LMAnM2RPDvp3EeevtBaLSbupYDQa0Hg2TNmjQMR8GkHvUNaOvTwPdWB1nxOhggv7s4C/1Xs7Tn
-        4kssuqhfx0btWXO5EGytBe3B/mcXe97psgUIBoiac93FSbYTZh1zseedrjmzuTpI4EGb6O9+u9r0St8E
-        NusM44O6VwG7OoNZ8kQ1zIJiArPkroU7/osiwx6qD7O4T+zEzZlyVp0+6teP1HX6ZIte6YmeJSNmWT6f
-        n0dGfQxbA9NqhQFxHKwhwMF62C7XwzC8lvmwzv1gPezpf7MeFgXWNCuvXHEFXKfHq4iDIzmxuGClck0/
-        CiwEfohtJ2y4hWVdat8aRYVVKBSuMd8pj+G1geL/EgC/sp5h6w0AHfO9JH7fGsonN0YSuJItrARc8vcS
-        gmVxbwTLAhZFUWdejGsPWOBTWYMsOf0V53Mc/zwyCphgGVT5FkewLFMNQ/Ig5AWrhuEojvw3DqB9Yv9E
-        cDh+q5oVIeuKxeKNUql0M4KoRERABERABERABERABERABERABERABERABERABERABERABERgZgT+AJ2d
-        jIzIAfy+AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALuSURBVHhe7Zo9axRRFIaDiBaCWogSgk1+go2ITYpgE4sQ
+        sE8X/AHWW4jYBBHEImqhhV2KNGnSbCCFYBESsnZpRGSDyIL7/Tnr+8ouDJfZ3bl7dyY347swzOzsOeee
+        88y5537Mzs3pIwIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAJeEsjlcpfa7faDXq+3
+        2e12v+L6R7VabfLM77j/MQiCxziuehlAWk4RVL/ff9LpdE5xnvhptVpnALiRz+cvp+WjN+0gg+YR/MFE
+        ShEC0DtpNBqL3gSTtCPIlHs4itPAGuoAWAld9H7Svp67/VqttoDa9NOEValUaqhV79E9V+r1+l3WK54h
+        +xD3Xzabzd+mDu79osy5B5WUA6w9LOJm4ACyDWC3x7ULnZuQe2fqwt5xZmsagluPgLVp84AA7UUEtHUb
+        GxdClllgjoYI/vM0zkPvUxga7WZuyoGglsNBsmZN6oajYFKP+ga05Wnge6uDrHgbDpDfXZyF/ptZ2nPx
+        JRFd1K9Do/YsuTQEW0the7D/xcWed7qcAoQDRM257uIkpxNmHXOx552uObK5OkjgYZuY3/1xtemVvgls
+        1hnGhbpXAbs6g1Hym2qYBcUURsktC3f8F0WGrWkeZvGcOBM3R8pZzfRRv75nbqZPtpgrPdNaMmaWFQqF
+        K8ionag9MO1WGBDHwRoCHOyHbXE/DN3rDhfrPA/2w57/N/thcWBNs/PKHVfAdVpexewc6YklBSuTe/px
+        YCHwfRxPo7pbVNZl9q1RXFjFYvEa853y6F6PUPxfA+DRYK8sGAA65HtJ/L46lE+vj6TQki2sFFzytwnB
+        sng2gmUBi6KoM6/GTQ9Y4DNZgyw5/RPnOo5/HhkFTLAMqnyLI1iWqYYuuRfxglXdcBRH/hsH0HaRbQHB
+        4fqDalaMrCuVSjfK5fKtGKISEQEREAEREAEREAEREAEREAEREAEREAEREAEREAEREAEREIGZEfgL7NKM
+        a7/yGZUAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnClearFilters.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMDSURBVHhe7do9aBRBFAfwEMQmKEG0EBFDCIIIFoJKGkln
-        o2kSCyHYigpikyKgnrXY2orY2GohNsKFpAkpAsKlsUiT4iBncR73/en/wR6YZeb23a7s3jj/g4Ww92Z2
-        3u/e7M7uZmqKHwpQgAIUoAAFKEABClCAAhSgAAUoQAEKUIACFKAABSgQCJTL5TPEUAr0er03g8HgvjLc
-        77AAC14Ei6yEv7DUYIVC4WSz2bzSbrdv9fv9G61W62q9Xr8UeTDXA0JYVrB8Pn8CMHcR/67b7f6oVqtt
-        CQ5/arXab8R8ReyTSqVy1nWfY+NH4g8MOR87h+H7WST/ChVUNAGN2ge8pgA3Go35/wJOqsAGlsvlpgH6
-        GNPu17hQhqqro6/n0qfTcDYwWVqgMr4lhQq3l6nq9DQ1gaESHmHb+9dYw/46nc5PTNE5JyvNBIaTeS0K
-        S85nqJaPaP8C20MgrAL5Kfa9xd/7Ue0FzckFsmVKWvMFyHe0uS1XzFEVgqXGTZl+o+AAvBXVz8RVoRYM
-        FXGA7d64CQjuqKsr0DbG7TPTeA2YTB8sDy7EHSim+HnA7JiqTdZyuApfjtt36u2UYPtIeNO2Yeq9jho4
-        jnMO0/TQhIb2H6LaT8z3GrCI89BmsVic0SSEY11DRXXD/QX73LhqJgGTitNiDUGlmkw/APp6qUHPPCYu
-        WBwsSRbrrwUTmCxFMsfQDCAOWFys4XjQftuEhrGc1ozZuxiAPbOAXfcOQ5MwKmnZArasae9dDLCWLFde
-        Pho3VQMqbNFSYWveVY8mYYDdYYVppIIYgK1ZKmxxjG78CcXi9ZMJDC9QLvqjoMxU7gxMz9twA36k7MKv
-        MKzB1p2/AU/rJyuVSqekkiwn/KW0xuHEceRtEc5dny033rtOJJHmIHFlXLE9JorzJDfNsWdyrKDC3hte
-        u33JZEAuHDSMJuezJI++Xcg58RiHaPIsX16QJO7Qhw4ETf7bx4dcmSMFKEABClCAAhSgAAUoQAEKUIAC
-        FKAABShAAQpQgAIUoMAkCPwBGXb1vDx3H6AAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMFSURBVHhe7do9aBRBFAfwIGIjShAtgogSRBDBQjCSRtLZ
+        aJrEQgi2EgWxsRDUsxZbWxEbWy3ERrhgmpAiIFwaC5sUBzmLy31/n/8He2CWmdt3u7J74/wPFsLem9l5
+        v3uzO7ubmRl+KEABClCAAhSgAAUoQAEKUIACFKAABShAAQpQgAIUoEAgUC6XTxFDKdDv918Ph8O7ynC/
+        wwIseBEsshL+wlKDFQqFY61W63Kn07kxGAyut9vtK41G43zkwVwPCGFZwfL5/FHA3Eb8216v96NarXYk
+        OPyp1+sHiPmC2IeVSuW06z6Hxo/E7xlyPnQOw/ezSP4lKqhoAhq3r1artQS42WzO/xdwUgU2sFwudwSg
+        65h2vyeFCscDroG+nkifTsPZwGRpgcr4mhQq3F6mqtPT1ASGSniAbedfY43663a7PzFFLzhZaSYwnMzr
+        UVhyPkO1fED759juA2EVyI+w7w3+3o1qL2hOLpAtU9KaL0C+oc1NuWKOqxAsNRZk+o2DA/D3qH6mrgq1
+        YKiIX9juTJqA4I67ugLt2aR9ZhqvAZPpg7XV2bgDxRVyDjBbpmqTtRyuwpfi9p16OyXYLhLesG2Yeq+i
+        Bo7jnME03TOhof37qPZT870GLOI8tFEsFo9rEsKxrqKieuH+gn1uXDWTgEnFabFGoFJNph8Afb3QoGce
+        ExcsDpYki/XXRROYLEUyx9AMIA5YXKzReNB+04SGsZzUjNm7GIA9toBd8w5DkzAqadkCtqxp710MsJYs
+        V14+GjdVAyps0VJha95VjyZhgN1ihWmkghiArVkqbHGCbvwJxeL1owkML1DO+aOgzFTuDEzP23ADvq/s
+        wq8wrMGeOn8DntZPViqVTkglWU74S2mNw4njyNsinLs+WW68t51IIs1B4sq4YntMFOdJbppjz+RYQYW9
+        M7x2+5zJgFw4aBhNzmdJHn27kHPiMY7Q5Fm+vCBJ3KEPHQia/LePD7kyRwpQgAIUoAAFKEABClCAAhSg
+        AAUoQAEKUIACFKAABShAgWkQ+APTPfWh8VAXagAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnRefresh.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAPzSURBVHhe7dpPiE1RHAfwSSJJLEQSTRJpUpoFWZBsWVh4
-        STZS0rCeJDITiWas1OxkoWxkYSORvNlI2RplxUqvPD15///Ne77fuq/e3M6559x7zeuc6/fqZHLPue/8
-        Pu+c3z33njs2Jh8REAEREAEREAEREAEREAEREAEREAEREAEREAERyLpAr9fbXygUNmY9zn8WX7/fz3W7
-        3UVBsyQlGEr/v0HDlFrfbDYP4N/TCPoiyiWUc51O52S5XN5qchuAZRqtWq3uANAtwHyq1WpNBqv7AO7L
-        8vLyHFFVeMNgmUNjgkbwzwDWjULSHUPbV+12+9gwXBgsQJsyjUynjwNqA4J9aBpNtog419PBdFWB4fuu
-        Og0S1Tkg7cTU+2yLYVsPU/Vbq9U6mCkwBDSJUrBFiFuv0WiUMNruh9t5OcKQpPeh/IpCQC5rI+B3GIE3
-        MWJOIT8dQbDH8fdZ/N81HHuBOpW4kN6BFYvFTQj6qy5QTNM6MOYrlco2U65h/kOZRps/tnDegQFjIWqZ
-        wNxjggofB8J2nPe9DZpXYJhWh3VBpV2N8/aH5zCheQXGtZIqIAT6weZ+D/Wmkft+6goTfWbAMNUmVMEg
-        cdcQ6B7baciVvQkl6rg3IwyB3lUFwgRvizWolwbNGzDe94XBgtug8bhgrJ8UzQswPnXQ5K7FJFhDI+0e
-        f4g4BXnwfJrvHElbgB3VTMfZkXTAty9BUt/L1Xm4xEn2vsUs/RUBEVghwOmuSgP1en2XUCkEsOyYVV1o
-        cAGadB6Ml/I4l/7gWf3CzMzMmqTB8dFQGIxPdbnESXrOkbXjYjHJ7QyCfpIEjRspqr0B/hAjCzrNFyUF
-        I3ISNLS5o1n3zaWJY2Rt04DFRUP93byhV4HxsfjIgk7zRTZguKr9jnp0A4AHpj4sLS2tw+h6qxldr03t
-        nTluA5b2AWKA9VKXK/nw0hkQU0dswBgo0D4muV3i2ooPIXVYGHWPTX106rgtGAPmpZ+Pbmw2QVB9C859
-        O+pJK66M31nPKRBTZ1RgSMy9qKUGlwWcpijXEfSZYB9zgltuON9ltH1u2i0KtuEOmfrn3HEVGPcbkVd+
-        JFmf2bThqPPmqhj+xTRTMhfc763KqwLcLHZu5Nh2SAfG9twtQs56ZJqiNqOK52CCL5VKm2375mQ9TD/m
-        nPAnN9xZbuCmfN3pDV8ncBIgbqc0a6QVYINz8j4QwDeY8E2vQPEKyFeldC/Uxe2nU/UVaEqw4U7n8/m1
-        3M/ka5ooV1CmUC4A6gRfD3AqwNXoTAjNCLYaffDunENoAmb76xENV4Bx2/pSTwREQAREQAREQAREQARE
-        QAREQAREQAREQAREQAS8FfgLG2NcRdX9plMAAAAASUVORK5CYII=
+        STZS0rCeJDITiWas1OxkoWxkYSORvNlI2RplxUqvPD15///Ne77fuq/e3M6559x7zeuc6/fqZHLPve/8
+        Pu+c3z33nDs2Jh8REAEREAEREAEREAEREAEREAEREAEREAEREAERyLpAr9fbXygUNmY9zn8WX7/fz3W7
+        3UVBsyQlGEr/v0HDkFrfbDYP4N/TCPoiyiWUc51O52S5XN5qchuAZRqtWq3uANAtwHzC300Gq/sA7svy
+        8vIcUVV4w2CZQ2OCRvDPKpVKNwpJdwznvmq328eG4cJgAdqUqWc6fRxQGxDsQ1NvskXEtZ4OhqsKDN93
+        1WmQqMbVarWdGHqfbTFs62Gofmu1WgczBYaAJlEKtghx6zUajRJ62/3weV72MCTpfSi/ohCQy9oI+B16
+        4E30mFPIT0cQ7HH8fRb/dw3HXmAYV+JCegdWLBY3IeivukCBUAfGPMC2mXIN8x/KNIb2H1s478CAsRA1
+        TWDuMUGFjwNhO6773gbNKzAMq8O6oNLOxvn4w2uY0LwC41xJFRAC/WDzvId608h9P3WFiT4zYBhqE6pg
+        kKtqCHSP7TDkzN6EEnXcmx6GQO+qAmGCt8Ua1EuD5g0Yn/vCYMFj0HhcMNZPiuYFGFcdNLlrMQnWUE+7
+        xx8iTkEePJ/mO0dyLsCOaobj7Ega4NuXIKnv5ew8XOIke99ilvaKgAisEOBwV6WBer2+S6gUAph2zKpu
+        NLgBTToPxlt5nFt/sFa/MDMzsyZpcFwaCoNxVZdTnKTXHNl5nCwmeZxB0E+SoHEjRbU3wB9iZEGn+aKk
+        YEROgoZz7mjmfXNp4hjZuWnA4qKh/m4+0KvAuCw+sqDTfJENGO5qv6OWbgDwwNSGpaWldehdbzW967Xp
+        fGeO24ClXUAMsF7qciUXL50BMTXEBoyBAu1jksclzq24CKnDQq97bGqjU8dtwRgwb/1curHZBEH1Lbj2
+        7aiVVtwZv7OeUyCmxqjAANKLmmpwWsBhinIdQZ8J9jEnuOWG613Guc9Nu0XBNtwhU/ucO64C434j8sqP
+        JPMzm3PY67y5K4Z/Mc2QzAXPe6vyqgA3i53rObYN0oHxfO4WIWc9Mg1Rm17FazDBl0qlzbZtc7Iehh9z
+        TviTG24sN3BTvu70hq8TOAkQt1GaOdIKsME1+RwI4BtM+KZXoHgH5KtSuhfq4rbTqfoKNCXYcKPz+fxa
+        7mfyNU2UKyhTKBcAdYKvBzgV4Go0JoRmBFuNNnh3zSE0AbP99YiGO8C4bX2pJwIiIAIiIAIiIAIiIAIi
+        IAIiIAIiIAIiIAIiIALeCvwFfRNcEqyQiSMAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
